<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.StepDetailFragment">

    <data>
        <import type="android.view.View"/>
        <variable name="step" type="com.banderkat.recipes.data.models.Step" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.exoplayer2.ui.PlayerView
                android:id="@+id/step_detail_player_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:auto_show="true"
                app:layout_constraintDimensionRatio="H,16:9"
                app:layout_constraintEnd_toStartOf="@id/step_detail_item_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:resize_mode="fit"
                app:show_buffering="always" />

            <TextView
                android:id="@+id/step_detail_item_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:text="@{step.id > 0 ? step.shortDescription : @string/ingredients_label}"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textSize="32sp"
                app:layout_constraintBottom_toTopOf="@id/step_detail_item_detail"
                app:layout_constraintTop_toBottomOf="@id/step_detail_player_view" />

            <TextView
                android:id="@+id/step_detail_item_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:text="@{step.description}"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                app:layout_constraintBottom_toTopOf="@id/step_detail_bottom_bar"
                app:layout_constraintTop_toBottomOf="@id/step_detail_item_label" />

            <android.support.constraint.Placeholder
                android:id="@+id/step_detail_bottom_bar"
                app:layout_constraintTop_toBottomOf="@id/step_detail_item_detail"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

            <ImageButton
                android:id="@+id/step_detail_prev_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_margin="32dp"
                android:padding="16dp"
                android:src="@android:drawable/ic_media_previous"
                app:layout_constraintTop_toBottomOf="@id/step_detail_bottom_bar"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <ImageButton
                android:id="@+id/step_detail_next_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_margin="32dp"
                android:padding="16dp"
                android:src="@android:drawable/ic_media_next"
                app:layout_constraintTop_toBottomOf="@id/step_detail_bottom_bar"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</layout>
