<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recipe_step_fragment_layout"
    android:tag="step-list-fragment"
    android:name="com.banderkat.recipes.fragments.RecipeStepFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".fragments.RecipeStepFragment">

    <android.support.v7.widget.RecyclerView
        android:orientation="vertical"
        android:id="@+id/recipe_step_recycler_view"
        tools:listitem="@layout/fragment_step"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</android.support.constraint.ConstraintLayout>
